# pipeline

./: CMakeLists.txt  README.md  change_log.md
data/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
scripts/: GUIrecord.py  RobotCommander.py  Task.py  TaskPoint.py  TaskTransfer.py  autocharge_manager.py  install.sh  pack.sh  pipelineGUI.py  uninstall.sh
srv/: deep_srv.srv
